--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,19 @@
   text-align: center;
 }
 
+.automationsection{
+  box-shadow: 1px 1px 1px 1px #68747D;
+  background: #132f53;
+  border: 2px solid maroon;
+  border-radius: 15px;
+  margin-top: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 10px;
+  padding-bottom: 3px;
+  text-align: center;
+  color: white;
+}
 .mathcauses:hover{
   background: rgba(113, 154,115, 0.5);
 }
@@ -103,7 +116,7 @@
   justify-content: center;
   align-items: center;
   border: 1px black;
-  width: 120px;
+  width: 115px;
   height: 120px;
   margin: 0 auto; /* Center the button horizontally */
   border-radius: 50%;
@@ -163,6 +176,15 @@
 .b17 {
   background: radial-gradient(circle at 55% 25%, rgb(251, 255, 4) 1px,rgb(248, 224, 4) 3%, rgb(6, 27, 87) 60%, rgb(11, 96, 136) 100%);
 }
+
+.b18 {
+  background: radial-gradient(circle at 50% 50%, rgb(235, 212, 212) 1px,rgb(94, 3, 3) 90%, rgb(202, 200, 88) 40%, rgb(193, 195, 221) 100%);
+}
+
+.b19 {
+  background: radial-gradient(circle at 50% 50%, rgb(251, 255, 2) 1px,rgb(56, 2, 2) 90%, rgb(190, 143, 13) 40%, rgb(193, 195, 221) 100%);
+}
+
 .ball a{
     color:white;
     font-size: 18px;
