--- a/css/style.css
+++ b/css/style.css
@@ -325,6 +325,11 @@ input::placeholder {
   height: 30px;
   border-radius: 25px;
 }
+.contact-icon1{
+  width: 25px;
+  height: 25px;
+  border-radius: 30px;
+}
 
 .contact-form {
   width: 100%;
