--- a/css/style.css
+++ b/css/style.css
@@ -373,3 +373,8 @@ input::placeholder {
 .form-message.error {
   color: red;
 }
+.navbarunderimage{
+  border: 4px solid #f3ecd8;
+  background-color: #f0e9d6;
+  box-shadow: 2px 2px 40px 2px rgb(5, 5, 5);
+}
