--- a/css/style.css
+++ b/css/style.css
@@ -374,7 +374,7 @@ input::placeholder {
   color: red;
 }
 .navbarunderimage{
-  border: 4px solid #f3ecd8;
-  background-color: #f0e9d6;
+  border: 5px solid #0a88f0;
+  background-color: #0a88f0;
   box-shadow: 2px 2px 40px 2px rgb(5, 5, 5);
 }
